#947 Hide search bar in home and fix alignements

--- a/app/webroot/css/layouts/default.css
+++ b/app/webroot/css/layouts/default.css
@@ -329,7 +329,8 @@ svg {
 
 #SentenceSearchForm {
     text-align: center;
-    padding: 2px 20px 10px 10px;
+    padding: 2px 10px 10px 10px;
+    margin: 0;
     position: relative;
 }
 
@@ -376,7 +377,7 @@ svg {
 
 .search-bar-extra {
     text-align: right;
-    right: 400px;
+    right: 450px;
     top: 3px;
     position: relative;
 }
